src/parser/ComplexStaticAnalysisParser.java
// Generated from /home/orang3/Uni/Magistrale/Compilatori/ComplexStaticAnalysis/src/parser/ComplexStaticAnalysis.g4 by ANTLR 4.7.2
package parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ComplexStaticAnalysisParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, ROP = 24, INTEGER = 25,
            ID = 26, WS = 27, LINECOMENTS = 28, BLOCKCOMENTS = 29, ERR = 30;
    public static final int
            RULE_block = 0, RULE_statement = 1, RULE_assignment = 2, RULE_deletion = 3,
            RULE_print = 4, RULE_functioncall = 5, RULE_ifthenelse = 6, RULE_declaration = 7,
            RULE_type = 8, RULE_parameter = 9, RULE_exp = 10, RULE_term = 11, RULE_factor = 12,
            RULE_value = 13;

    private static String[] makeRuleNames() {
        return new String[]{
                "block", "statement", "assignment", "deletion", "print", "functioncall",
                "ifthenelse", "declaration", "type", "parameter", "exp", "term", "factor",
                "value"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'{'", "'}'", "';'", "'='", "'delete'", "'print'", "'('", "','",
                "')'", "'if'", "'then'", "'else'", "'int'", "'bool'", "'var'", "'-'",
                "'+'", "'*'", "'/'", "'&&'", "'||'", "'true'", "'false'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                "ROP", "INTEGER", "ID", "WS", "LINECOMENTS", "BLOCKCOMENTS", "ERR"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "ComplexStaticAnalysis.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public ComplexStaticAnalysisParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class BlockContext extends ParserRuleContext {
        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public BlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_block;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).enterBlock(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).exitBlock(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ComplexStaticAnalysisVisitor)
                return ((ComplexStaticAnalysisVisitor<? extends T>) visitor).visitBlock(this);
            else return visitor.visitChildren(this);
        }
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_block);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(28);
                match(T__0);
                setState(32);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__5) | (1L << T__9) | (1L << T__12) | (1L << T__13) | (1L << ID))) != 0)) {
                    {
                        {
                            setState(29);
                            statement();
                        }
                    }
                    setState(34);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(35);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StatementContext extends ParserRuleContext {
        public AssignmentContext assignment() {
            return getRuleContext(AssignmentContext.class, 0);
        }

        public DeletionContext deletion() {
            return getRuleContext(DeletionContext.class, 0);
        }

        public PrintContext print() {
            return getRuleContext(PrintContext.class, 0);
        }

        public FunctioncallContext functioncall() {
            return getRuleContext(FunctioncallContext.class, 0);
        }

        public IfthenelseContext ifthenelse() {
            return getRuleContext(IfthenelseContext.class, 0);
        }

        public DeclarationContext declaration() {
            return getRuleContext(DeclarationContext.class, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).enterStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).exitStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ComplexStaticAnalysisVisitor)
                return ((ComplexStaticAnalysisVisitor<? extends T>) visitor).visitStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_statement);
        try {
            setState(52);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(37);
                    assignment();
                    setState(38);
                    match(T__2);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(40);
                    deletion();
                    setState(41);
                    match(T__2);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(43);
                    print();
                    setState(44);
                    match(T__2);
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(46);
                    functioncall();
                    setState(47);
                    match(T__2);
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(49);
                    ifthenelse();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(50);
                    declaration();
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(51);
                    block();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AssignmentContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(ComplexStaticAnalysisParser.ID, 0);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public AssignmentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assignment;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).enterAssignment(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).exitAssignment(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ComplexStaticAnalysisVisitor)
                return ((ComplexStaticAnalysisVisitor<? extends T>) visitor).visitAssignment(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AssignmentContext assignment() throws RecognitionException {
        AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_assignment);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(54);
                match(ID);
                setState(55);
                match(T__3);
                setState(56);
                exp();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DeletionContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(ComplexStaticAnalysisParser.ID, 0);
        }

        public DeletionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_deletion;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).enterDeletion(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).exitDeletion(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ComplexStaticAnalysisVisitor)
                return ((ComplexStaticAnalysisVisitor<? extends T>) visitor).visitDeletion(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DeletionContext deletion() throws RecognitionException {
        DeletionContext _localctx = new DeletionContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_deletion);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(58);
                match(T__4);
                setState(59);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PrintContext extends ParserRuleContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public PrintContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_print;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).enterPrint(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).exitPrint(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ComplexStaticAnalysisVisitor)
                return ((ComplexStaticAnalysisVisitor<? extends T>) visitor).visitPrint(this);
            else return visitor.visitChildren(this);
        }
    }

    public final PrintContext print() throws RecognitionException {
        PrintContext _localctx = new PrintContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_print);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(61);
                match(T__5);
                setState(62);
                exp();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FunctioncallContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(ComplexStaticAnalysisParser.ID, 0);
        }

        public List<ExpContext> exp() {
            return getRuleContexts(ExpContext.class);
        }

        public ExpContext exp(int i) {
            return getRuleContext(ExpContext.class, i);
        }

        public FunctioncallContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_functioncall;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).enterFunctioncall(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).exitFunctioncall(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ComplexStaticAnalysisVisitor)
                return ((ComplexStaticAnalysisVisitor<? extends T>) visitor).visitFunctioncall(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FunctioncallContext functioncall() throws RecognitionException {
        FunctioncallContext _localctx = new FunctioncallContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_functioncall);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(64);
                match(ID);
                setState(65);
                match(T__6);
                setState(74);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__15) | (1L << T__21) | (1L << T__22) | (1L << INTEGER) | (1L << ID))) != 0)) {
                    {
                        setState(66);
                        exp();
                        setState(71);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__7) {
                            {
                                {
                                    setState(67);
                                    match(T__7);
                                    setState(68);
                                    exp();
                                }
                            }
                            setState(73);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(76);
                match(T__8);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class IfthenelseContext extends ParserRuleContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public List<BlockContext> block() {
            return getRuleContexts(BlockContext.class);
        }

        public BlockContext block(int i) {
            return getRuleContext(BlockContext.class, i);
        }

        public IfthenelseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_ifthenelse;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).enterIfthenelse(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).exitIfthenelse(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ComplexStaticAnalysisVisitor)
                return ((ComplexStaticAnalysisVisitor<? extends T>) visitor).visitIfthenelse(this);
            else return visitor.visitChildren(this);
        }
    }

    public final IfthenelseContext ifthenelse() throws RecognitionException {
        IfthenelseContext _localctx = new IfthenelseContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_ifthenelse);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(78);
                match(T__9);
                setState(79);
                match(T__6);
                setState(80);
                exp();
                setState(81);
                match(T__8);
                setState(82);
                match(T__10);
                setState(83);
                block();
                setState(84);
                match(T__11);
                setState(85);
                block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DeclarationContext extends ParserRuleContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(ComplexStaticAnalysisParser.ID, 0);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public List<ParameterContext> parameter() {
            return getRuleContexts(ParameterContext.class);
        }

        public ParameterContext parameter(int i) {
            return getRuleContext(ParameterContext.class, i);
        }

        public DeclarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_declaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).enterDeclaration(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).exitDeclaration(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ComplexStaticAnalysisVisitor)
                return ((ComplexStaticAnalysisVisitor<? extends T>) visitor).visitDeclaration(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DeclarationContext declaration() throws RecognitionException {
        DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_declaration);
        int _la;
        try {
            setState(107);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__12:
                case T__13:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(87);
                    type();
                    setState(88);
                    match(ID);
                    setState(89);
                    match(T__3);
                    setState(90);
                    exp();
                    setState(91);
                    match(T__2);
                }
                break;
                case ID:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(93);
                    match(ID);
                    setState(94);
                    match(T__6);
                    setState(103);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << T__13) | (1L << T__14))) != 0)) {
                        {
                            setState(95);
                            parameter();
                            setState(100);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (_la == T__7) {
                                {
                                    {
                                        setState(96);
                                        match(T__7);
                                        setState(97);
                                        parameter();
                                    }
                                }
                                setState(102);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                        }
                    }

                    setState(105);
                    match(T__8);
                    setState(106);
                    block();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TypeContext extends ParserRuleContext {
        public TypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_type;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).enterType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).exitType(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ComplexStaticAnalysisVisitor)
                return ((ComplexStaticAnalysisVisitor<? extends T>) visitor).visitType(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TypeContext type() throws RecognitionException {
        TypeContext _localctx = new TypeContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_type);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(109);
                _la = _input.LA(1);
                if (!(_la == T__12 || _la == T__13)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParameterContext extends ParserRuleContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(ComplexStaticAnalysisParser.ID, 0);
        }

        public ParameterContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_parameter;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).enterParameter(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).exitParameter(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ComplexStaticAnalysisVisitor)
                return ((ComplexStaticAnalysisVisitor<? extends T>) visitor).visitParameter(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ParameterContext parameter() throws RecognitionException {
        ParameterContext _localctx = new ParameterContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_parameter);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(112);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__14) {
                    {
                        setState(111);
                        match(T__14);
                    }
                }

                setState(114);
                type();
                setState(115);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExpContext extends ParserRuleContext {
        public TermContext left;
        public ExpContext right;

        public TermContext term() {
            return getRuleContext(TermContext.class, 0);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public ExpContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_exp;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).enterExp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).exitExp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ComplexStaticAnalysisVisitor)
                return ((ComplexStaticAnalysisVisitor<? extends T>) visitor).visitExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ExpContext exp() throws RecognitionException {
        ExpContext _localctx = new ExpContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_exp);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(118);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__15) {
                    {
                        setState(117);
                        match(T__15);
                    }
                }

                setState(120);
                ((ExpContext) _localctx).left = term();
                setState(123);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__15 || _la == T__16) {
                    {
                        setState(121);
                        _la = _input.LA(1);
                        if (!(_la == T__15 || _la == T__16)) {
                            _errHandler.recoverInline(this);
                        } else {
                            if (_input.LA(1) == Token.EOF) matchedEOF = true;
                            _errHandler.reportMatch(this);
                            consume();
                        }
                        setState(122);
                        ((ExpContext) _localctx).right = exp();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TermContext extends ParserRuleContext {
        public FactorContext left;
        public TermContext right;

        public FactorContext factor() {
            return getRuleContext(FactorContext.class, 0);
        }

        public TermContext term() {
            return getRuleContext(TermContext.class, 0);
        }

        public TermContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_term;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).enterTerm(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).exitTerm(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ComplexStaticAnalysisVisitor)
                return ((ComplexStaticAnalysisVisitor<? extends T>) visitor).visitTerm(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TermContext term() throws RecognitionException {
        TermContext _localctx = new TermContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_term);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(125);
                ((TermContext) _localctx).left = factor();
                setState(128);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__17 || _la == T__18) {
                    {
                        setState(126);
                        _la = _input.LA(1);
                        if (!(_la == T__17 || _la == T__18)) {
                            _errHandler.recoverInline(this);
                        } else {
                            if (_input.LA(1) == Token.EOF) matchedEOF = true;
                            _errHandler.reportMatch(this);
                            consume();
                        }
                        setState(127);
                        ((TermContext) _localctx).right = term();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FactorContext extends ParserRuleContext {
        public ValueContext left;
        public Token op;
        public ValueContext right;

        public List<ValueContext> value() {
            return getRuleContexts(ValueContext.class);
        }

        public ValueContext value(int i) {
            return getRuleContext(ValueContext.class, i);
        }

        public TerminalNode ROP() {
            return getToken(ComplexStaticAnalysisParser.ROP, 0);
        }

        public FactorContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_factor;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).enterFactor(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ComplexStaticAnalysisListener)
                ((ComplexStaticAnalysisListener) listener).exitFactor(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ComplexStaticAnalysisVisitor)
                return ((ComplexStaticAnalysisVisitor<? extends T>) visitor).visitFactor(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FactorContext factor() throws RecognitionException {
        FactorContext _localctx = new FactorContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_factor);
        int _la;
        try {
            setState(140);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 13, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(130);
                    ((FactorContext) _localctx).left = value();
                    setState(133);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == ROP) {
                        {
                            setState(131);
                            ((FactorContext) _localctx).op = match(ROP);
                            setState(132);
                            ((FactorContext) _localctx).right = value();
                        }
                    }

                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(135);
                    ((FactorContext) _localctx).left = value();
                    setState(138);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == T__19 || _la == T__20) {
                        {
                            setState(136);
                            ((FactorContext) _localctx).op = _input.LT(1);
                            _la = _input.LA(1);
                            if (!(_la == T__19 || _la == T__20)) {
                                ((FactorContext) _localctx).op = (Token) _errHandler.recoverInline(this);
                            } else {
                                if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                _errHandler.reportMatch(this);
                                consume();
                            }
                            setState(137);
                            ((FactorContext) _localctx).right = value();
                        }
                    }
